fix: prevent scrollbar from repositioning web page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,10 @@
 
 @import './animate';
 
+html {
+  overflow-y: scroll;
+}
+
 .container.absolute {
   position: absolute;
   top: 100px;
